--- a/cw4/cw4/cw4.csproj
+++ b/cw4/cw4/cw4.csproj
@@ -8,5 +8,9 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
+  </ItemGroup>
+
 
 </Project>
